<resources>

    <string name="app_name">RCPPTClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="pagedown">pagedown</string>
    <string name="pageup">pageup</string>
    <string name="hint">hint</string>
    <string name="ip">ip:</string>
    <string name="iphint">please input your server ip</string>

</resources>